crates/plugin_partial_bundling/src/merge_module_pots/snapshots/boundaries_enforce_min_size_0-4.snap
---
source: crates/plugin_partial_bundling/src/merge_module_pots/test_boundaries.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: D_3f39
id: B_3f39
immutable: true
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
]
resources: []
