crates/plugin_partial_bundling/src/merge_module_pots/snapshots/boundaries_enforce_min_size_0-6.snap
---
source: crates/plugin_partial_bundling/src/merge_module_pots/test_boundaries.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: B
id: B_3f39d5c348e5b79d06e842c114e6cc57_js
immutable: true
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
]
resources: []

-------

name: B
id: B_44bd7ae60f478fae1061e11a7739f4b9_js
immutable: true
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "H",
        query_string: "",
    },
]
resources: []

-------

name: B
id: B_a9f51566bd6705f7ea6ad54bb9deb449_js
immutable: false
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "E",
        query_string: "",
    },
]
resources: []
