crates/plugin_partial_bundling/src/merge_module_pots/snapshots/boundaries_enforce_min_size_not_enough_size.snap
---
source: crates/plugin_partial_bundling/src/merge_module_pots/test_boundaries.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: B
id: B_23282ac10f2eedd4a10f505192bdd323_js
immutable: true
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
    ModuleId {
        relative_path: "H",
        query_string: "",
    },
]
resources: []
